<resources>
    <string name="app_name">FitHR</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- String name for Profile xml-->
    <string name="title_agent">Agent ID*</string>
    <string name="title_age">Age*</string>
    <string name="title_height">Height (m)*</string>
    <string name="title_weight">Weight (kg)*</string>
    <string name="title_rest_HR">Resting HR*</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <!--Tab text for the Tab view-->
    <string name="tab_text_1">Heart Rate</string>
    <string name="tab_text_2">Today</string>
    <string name="tab_text_3">Overview</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_profile">Profile</string>

    <!--Title string for Profile activity-->
    <string name="agent_id_title">Agent ID</string>
    <string name="age_title">Age</string>
    <string name="height_title">Height (m)</string>
    <string name="weight_title">Weight (kg)</string>
    <string name="resting_hr_title">Resting HR</string>
    <string name="instructText">Hello, please fill the fields to calculate your maximum heart rate (Max HR)</string>
    <string name="chromeBtnText">Login</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="title_activity_main">FitHR</string>
    <string name="bpm">bpm</string>
<string name="alright">Are you Alright?</string>
<string name="lowHr_text">Your heart rate is low. Are you alright?</string>
<string name="highHr_text">Your heart rate is high. Are you alright?</string>
<string name="make_call">Should we call an Mike?</string>
<string name="no_make_call">If you are sure, alright.</string>
<string name="exercising_activity">Are you exercising or engaged in any activity?</string>
<string name="yes_exercising">Great,I will not get in your way.</string>

</resources>
